package helron.foundationWizzard.com.datagenerator;

import java.util.LinkedList;

public class DataStructureStruct extends DataStructureClass{

    public DataStructureStruct(String id, DataStructureType dataStructureType, LinkedList<Parameter> parameterList) {
        super(id, dataStructureType, parameterList);
    }
}
